deployments/overlays/dev/postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
      - name: postgres
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
            ephemeral-storage: 500Mi
          limits:
            cpu: 2000m
            memory: 2Gi
            ephemeral-storage: 1Gi
        securityContext:
          readOnlyRootFilesystem: true
